# kcd_bilingual_generator_rs

./: .gitignore  Cargo.toml  README.md  README_zh.md  rustfmt.toml
assets/: bilingual_set.txt
crates/generator_core/: Cargo.toml
crates/generator_core/src/: async_read.rs  bilingual_generator.rs  bilingual_generator_errors.rs  lib.rs  util.rs
crates/generator_core/tests/: create_pak_test.rs  generate_bilingual_resources_test.rs  multithread_release_test_10times.ps1  process_single_bilingual_test.rs  read_xml_test.rs  test_generate_async.rs  test_generate_multithread.rs
crates/gui/: Cargo.toml
crates/gui/src/: generator_gui.rs
crates/path_finder/: Cargo.toml
crates/path_finder/src/: lib.rs
crates/path_finder/tests/: path_finder_test.rs
src/: main.rs
src/core/: async_read.rs  bilingual_generator.rs  bilingual_generator.txt  bilingual_generator_errors.rs  mod.rs  util.rs
src/core/path_finder/: mod.rs  path_finder.rs
src/gui/: generator_gui.rs  mod.rs
tests/: create_pak_test.rs  generate_bilingual_resources_async_test.rs  generate_bilingual_resources_multithread_test.rs  generate_bilingual_resources_test.rs  multithread_release_test_10times.ps1  path_finder_test.rs  process_single_bilingual_test.rs  read_xml_test.rs  test_generate_async.rs  test_generate_multithread.rs
