[package]
name = "kcd_bilingual_generator_rust"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

[build-dependencies]

[dependencies]
directories = "6.0.0"
eframe = "0.31.1"
egui = "0.31.1"
indexmap = "2.8.0"
quick-xml = "0.37.4"
rayon = "1.10.0"
regex = "1.11.1"
rfd = "0.15.3"
winreg = "0.55.0"
zip = "2.5.0"
serial_test = "2.0"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }

# winres = "0.1"
# [profile.dev]
# lto = true

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
