[package]
name = "kcd_bilingual_generator_rust"
version = "0.1.0"
edition = "2024"
# build = "build.rs"
[workspace]
members = ["crates/gui", "crates/path_finder", "crates/generator_core"]
[build-dependencies]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
] } # Ensure tokio test features are enabled

[dependencies]
eframe = "0.31.1"
gui = { path = "crates/gui" }

# [profile.dev]
# lto = true

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = 'thin'
# lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
