[package]
name = "generator_core"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
indexmap = "2.8.0"
quick-xml = "0.37.4"
rayon = "1.10.0"
zip = "2.5.0"
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "2.0.12"
faststr = "0.2.31"
path_finder = { path = "../path_finder" }
sqlx = { version = "0.8.5", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
] }
diesel = { version = "1.4", features = ["postgres"] }

[dev-dependencies]
diesel = { version = "1.4", features = ["postgres"] }
tempfile = "3"
